[package]
name = "rust-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.216", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.4"

[[bin]]
name = "questioner"
path = "src/bin/questioner.rs"

[[bin]]
name = "answer"
path = "src/bin/answer.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
